<resources>
    <string name="app_name">Quality Air</string>
    <string name="app_title">Quality Air</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search a city</string>
    <string name="action_back">Return</string>
    <string name="search">Search</string>
    <string name="submitted">Submmited</string>
    <string name="title_activity_settings">Settings</string>
    <string name="d_cities"> of your cities.</string>
    <string name="delete">You delete </string>
    <string name="d_add"> to your cities.</string>
    <string name="add">You add </string>
    <string name="level">Level pollution:  </string>
    <string name="good">, Good </string>
    <string name="mod">, Moderate </string>
    <string name="bad">, Unhealthy </string>
    <string name="update">Last update: </string>
    <string name="lang">Language: </string>
    <string name="result">There is not coincidences, try again!</string>
    <string name="en">English </string>
    <string name="fr">French </string>
    <string name="es">Spanish </string>
    <string name="save">Save </string>
    <string name="forecast">Forecast </string>
    <string name="weather"> Weather</string>
    <string name="humidity"> Humidity</string>
    <string name="particulas">Inhalable particles</string>
    <string name="sulfur">Sulfur dioxide</string>
    <string name="email">To</string>
    <string name="subject">Subject</string>
    <string name="send">Enviar</string>
    <string name="Near">Near of you</string>
    <string name="Favorites">Favorites</string>
    |
    <string name="mode">Night mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="danger_notification_title_template">Warning: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="danger_notification_placeholder_text_template">Members of sensitive groups may experience health effects. The general public is not likely to be affected. Active children and adults, and people with respiratory disease, such as asthma, should limit prolonged outdoor exertion.
    </string>
    <string name="action_reply">Reply</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
