<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="iut.qualiteair.Settings">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <Switch
                android:text="@string/mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switchStatus" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio_group">

                <RadioButton
                    android:text="@string/es"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton_es"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton_en"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/fr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton_fr"
                    android:layout_weight="1" />
            </RadioGroup>

            <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_save" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
