<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="iut.qualiteair.Details"
    tools:showIn="@layout/activity_details">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:id="@+id/detailTitle"
            android:gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <lecho.lib.hellocharts.view.ColumnChartView
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="147dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="20dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="140dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="Min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:paddingRight="10dp" />

                    <TextView
                        android:text="Max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:paddingRight="20dp" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/particulas"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="25.03"
                        android:id="@+id/lblPM10" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/min10"
                        android:layout_weight="1"
                        android:paddingRight="10dp" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/max10"
                        android:layout_weight="1"
                        android:paddingLeft="20dp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/sulfur"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/lblNO2"
                        android:layout_weight="1" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/min2"
                        android:layout_weight="1"
                        android:paddingRight="10dp" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/max2"
                        android:layout_weight="1"
                        android:paddingLeft="20dp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/weather"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/lblW"
                        android:layout_weight="1" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minw"
                        android:layout_weight="1"
                        android:paddingRight="10dp" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/maxw"
                        android:layout_weight="1"
                        android:paddingLeft="20dp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/humidity"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/lblH"
                        android:layout_weight="1" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minh"
                        android:layout_weight="1"
                        android:paddingRight="10dp" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/maxh"
                        android:layout_weight="1"
                        android:paddingLeft="20dp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lblU"
                        android:layout_weight="1" />

                    <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/updateD"
                        android:layout_weight="1" />
                </LinearLayout>

            </TableRow>

        </TableLayout>
    </LinearLayout>

</RelativeLayout>